# TenukiGo-Pi

./: .dockerignore  .envrc  .gitignore  Dockerfile  GoBoard.py  GoGame.py  GoPhoto.py  README.md  convert_to_tflite.py  environment.yml  flake.nix  main.py  pyproject.toml  recup_os.py  requirements.docker.txt  requirements.txt  sgf_sender.py
Post_treatment_AI/Code/: Fill_gaps_model.py
scripts/: cam_go_script.sh  convert_keras_model_to_tflite.py  convert_ultralytics_to_tflite.py  livestream.sh  net_mode.sh  process_video.py
src/tenukigo_pi/: Fill_gaps_model.py  GoBoard.py  GoGame.py  GoVisual.py  corrector_noAI.py  corrector_withAI.py  motion_detector.py  sgf_to_numpy.py  utils_.py
src/tenukigo_pi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tenukigo_pi/utils/: model_utils.py  sgf_utils.py
static/: photoStyle.css
templates/: Home.html  transparent.html
