[project]
name = "tenukigo_pi"
version = "0.1.0"
description = "A Go game SGF recorder built on computer vision, ported to run on embedded systems."
authors = [
    { name = "Aloïs VINCENT", email = "alois.vincent@imt-atlantique.net" },
    { name = "Etienne BERTIN", email = "etienne.bertin@imt-atlantique.net"},
    { name = "Kani FOMBA", email = "kani.fomba@imt-atlantique.net"},
    { name = "Jules SEYA", email = "jules.seya@imt-atlantique.net"},
    { name = "Xiangyu MAO", email = "xiangyu.mao@imt-atlantique.net"},
    { name = "Emmanuel KOUASSI", email = "emmanuel.kouassi@imt-atlantique.net"}
]
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "opencv-python-headless >=4.12.0.88,<5.0.0.0",
    "ultralytics >=8.3.223,<9.0.0",
    "scikit-learn",

    "tflite-runtime >=2.14.0,<3.0.0; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "tensorflow >=2.14.0,<3.0.0; platform_machine == 'x86_64'"
]

[project.optional-dependencies]
dev = [
    "flake8 >=7.3.0,<8.0.0"
]

[build-system]
# We don't need poetry-core anymore, but 'uv' understands this.
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]